# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../services/bundlemgr/appexecfwk_bundlemgr.gni")

group("bundlemanagerfuzztest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    "bmsabilityinfofromjson_fuzzer:BMSAbilityInfoFromJsonFuzzTest",
    "bmsabilityinfomarshalling_fuzzer:BMSAbilityInfoMarshallingFuzzTest",
    "bmsabilityinfounmarshalling_fuzzer:BMSAbilityInfoUnmarshallingFuzzTest",
    "bmsaccounthelper_fuzzer:BMSAccountHelperFuzzTest",
    "bmsaddfirstinstallbundleinfo_fuzzer:BMSAddFirstInstallBundleInfoFuzzTest",
    "bmsaginghandlerchain_fuzzer:BMSAgingHandlerChainFuzzTest",
    "bmsagingrequest_fuzzer:BMSAgingRequestFuzzTest",
    "bmsagingutil_fuzzer:BMSAgingUtilFuzzTest",
    "bmsappcontrolhost_fuzzer:BMSAppControlHostFuzzTest",
    "bmsapplicationinfo_fuzzer:BMSApplicationInfoFuzzTest",
    "bmsappservicefwkinstaller_fuzzer:BMSAppServiceFwkInstallerFuzzTest",
    "bmsappservicefwkinstalleraddappprovisioninfo_fuzzer:BMSAppServiceFwkInstallerAddAppProvisionInfoFuzzTest",
    "bmsappservicefwkinstallerbeforeinstall_fuzzer:BMSAppServiceFwkInstallerBeforeInstallFuzzTest",
    "bmsappservicefwkinstallercheckandparsefiles_fuzzer:BMSAppServiceFwkInstallerCheckAndParseFilesFuzzTest",
    "bmsappservicefwkinstallercheckapplabelinfo_fuzzer:BMSAppServiceFwkInstallerCheckAppLabelInfoFuzzTest",
    "bmsappservicefwkinstallercheckfiletype_fuzzer:BMSAppServiceFwkInstallerCheckFileTypeFuzzTest",
    "bmsappservicefwkinstallerextractmodule_fuzzer:BMSAppServiceFwkInstallerExtractModuleFuzzTest",
    "bmsappservicefwkinstallergetinnerbundleinfo_fuzzer:BMSAppServiceFwkInstallerGetInnerBundleInfoFuzzTest",
    "bmsappservicefwkinstallerinnerprocessinstall_fuzzer:BMSAppServiceFwkInstallerInnerProcessInstallFuzzTest",
    "bmsappservicefwkinstallerprocessnativelibrary_fuzzer:BMSAppServiceFwkInstallerProcessNativeLibraryFuzzTest",
    "bmsbeforeaddextresource_fuzzer:BMSBeforeAddExtResourceFuzzTest",
    "bmsbmsjsonutil_fuzzer:BMSBMSJsonUtilFuzzTest",
    "bmsbundleagingmgr_fuzzer:BMSBundleAgingMgrFuzzTest",
    "bmsbundlebackupmgr_fuzzer:BMSBundleBackupMgrFuzzTest",
    "bmsbundlecloneinstaller_fuzzer:BmsBundleCloneInstallerFuzzTest",
    "bmsbundleconnectabilitymgr_fuzzer:BMSBundleConnectAbilityMgrFuzzTest",
    "bmsbundleeventcallbackhost_fuzzer:BMSBundleEventCallbackHostFuzzTest",
    "bmsbundleeventcallbackproxy_fuzzer:BMSBundleEventCallbackProxyFuzzTest",
    "bmsbundleresourceeventsubscriber_fuzzer:BmsBundleResourceEventSubscriberFuzzTest",
    "bmsapplicationinfofromjson_fuzzer:BMSApplicationInfoFromJsonFuzzTest",
    "bmsbundlefileutil_fuzzer:BMSBundleFileUtilFuzzTest",
    "bmsbundleinfo_fuzzer:BMSBundleInfoFuzzTest",
    "bmsbundleinstallerhost_fuzzer:BMSBundleInstallerHostFuzzTest",
    "bmsbundleinstallerproxy_fuzzer:BMSBundleInstallerProxyFuzzTest",
    "bmsbundlemanagercallback_fuzzer:BMSBundleManagerCallbackFuzzTest",
    "bmsbundlemanagercallbackproxy_fuzzer:BMSBundleManagerCallbackProxyFuzzTest",
    "bmsbundlemanagercallbackstub_fuzzer:BMSBundleManagerCallbackStubFuzzTest",
    "bmsbundlemgrextclient_fuzzer:BMSBundleMgrExtClientFuzzTest",
    "bmsbundlemgrexthostimpl_fuzzer:BMSBundleMgrExtHostImplFuzzTest",
    "bmsbundlemgrhost_fuzzer:BMSBundleMgrHostFuzzTest",
    "bmsbundlemgrproxyfuzzpartfourtest_fuzzer:BMSBundleMgrProxyFuzzPartFourTest",
    "bmsbundlemgrproxyfuzzpartonetest_fuzzer:BMSBundleMgrProxyFuzzPartOneTest",
    "bmsbundlemgrproxyfuzzpartthreetest_fuzzer:BMSBundleMgrProxyFuzzPartThreeTest",
    "bmsbundlemgrproxyfuzzparttwotest_fuzzer:BMSBundleMgrProxyFuzzPartTwoTest",
    "bmsbundlemgrserviceparallelization_fuzzer:BMSBundleMgrServiceParallelizationFuzzTest",
    "bmsbundlemultiuserinstaller_fuzzer:BMSBundleMultiUserInstallerFuzzTest",
    "bmsbundleoverlay_fuzzer:BMSBundleOverlayFuzzTest",
    "bmsbundleoverlaydatamgr_fuzzer:BMSBundleOverlayDataMgrFuzzTest",
    "bmsbundleoverlayinstallerchecker_fuzzer:BMSBundleOverlayInstallerCheckerFuzzTest",
    "bmsbundlereshostimpl_fuzzer:BMSBundleResHostImplFuzzTest",
    "bmsbundleresource_fuzzer:BMSBundleResourceFuzzTest",
    "bmsbundleresourcedrawable_fuzzer:BMSBundleResourceDrawableFuzzTest",
    "bmsbundleresourcehelper_fuzzer:BMSBundleResourceHelperFuzzTest",
    "bmsbundleresourcehost_fuzzer:BMSBundleResourceHostFuzzTest",
    "bmsbundleresourceiconrdb_fuzzer:BMSBundleResourceIconRdbFuzzTest",
    "bmsbundleresourceproxy_fuzzer:BMSBundleResourceProxyFuzzTest",
    "bmsbundleresourcethemeprocess_fuzzer:BMSBundleResourceThemeProcessFuzzTest",
    "bmsbundleresourcemanager_fuzzer:BMSBundleResourceManagerFuzzTest",
    "bmsbundleresparam_fuzzer:BMSBundleResParamFuzzTest",
    "bmsbundleresparser_fuzzer:BMSBundleResParserFuzzTest",
    "bmsbundleresprocess_fuzzer:BMSBundleResProcessFuzzTest",
    "bmsbundleresrdb_fuzzer:BMSBundleResRdbFuzzTest",
    "bmsbundlestatuscallbackproxy_fuzzer:BMSBundleStatusCallbackProxyFuzzTest",
    "bmsbundlestreaminstallerhost_fuzzer:BMSBundleStreamInstallerHostFuzzTest",
    "bmsbundlestreaminstallerproxy_fuzzer:BMSBundleStreamInstallerProxyFuzzTest",
    "bmsbundlesyscap_fuzzer:BMSBundleSysCapFuzzTest",
    "bmsbundleuserinfo_fuzzer:BMSBundleUserInfoFuzzTest",
    "bmsbundleusermgrhost_fuzzer:BMSBundleUserMgrHostFuzzTest",
    "bmsbundleusermgrproxy_fuzzer:BMSBundleUserMgrProxyFuzzTest",
    "bmscheckencryptionparam_fuzzer:BMSCheckEncryptionParamFuzzTest",
    "bmscheckissystemappbyuid_fuzzer:BMSCheckIsSystemAppByUidFuzzTest",
    "bmscleanbundlecachefiles_fuzzer:BMSCleanBundleCacheFilesFuzzTest",
    "bmscleanbundledatafiles_fuzzer:BMSCleanBundleDataFilesFuzzTest",
    "bmscleancachecallbackhost_fuzzer:BMSCleanCacheCallbackHostFuzzTest",
    "bmscleancachecallbackproxy_fuzzer:BMSCleanCacheCallbackProxyFuzzTest",
    "bmscheckabilityenableinstall_fuzzer:BMSCheckAbilityEnableInstallFuzzTest",
    "bmscommonevent_fuzzer:BMSCommonEventFuzzTest",
    "bmscompatibleabilityinfo_fuzzer:BMSCompatibleAbilityInfoFuzzTest",
    "bmscompatibleapplicationinfo_fuzzer:BMSCompatibleApplicationInfoFuzzTest",
    "bmsconverttargetabilityinfo_fuzzer:BMSConvertTargetAbilityInfoFuzzTest",
    "bmscopyfiles_fuzzer:BMSCopyFilesFuzzTest",
    "bmsdeletefirstinstallbundleinfo_fuzzer:BMSDeleteFirstInstallBundleInfoFuzzTest",
    "bmsdriverinstaller_fuzzer:BMSDriverInstallerFuzzTest",
    "bmsecologicalrulemgrserviceclient_fuzzer:BMSEcologicalRulemgrServiceClientFuzzTest",
    "bmsextendresourcemanager_fuzzer:BMSExtendResourceManagerFuzzTest",
    "bmsextendresourcemanagerhost_fuzzer:BMSExtendResourceManagerHostFuzzTest",
    "bmsextensionabilityinfo_fuzzer:BMSExtensionAbilityInfoFuzzTest",
    "bmsextensionclient_fuzzer:BMSExtensionClientFuzzTest",
    "bmsfirstinstallbundleinfo_fuzzer:BMSFirstInstallBundleInfoFuzzTest",
    "bmsforminfo_fuzzer:BMSFormInfoFuzzTest",
    "bmsfreeinstall_fuzzer:BMSFreeInstallFuzzTest001",
    "bmsfreeinstall_fuzzer:BMSFreeInstallFuzzTest002",
    "bmsfreeinstall_fuzzer:BMSFreeInstallFuzzTest003",
    "bmsfreeinstall_fuzzer:BMSFreeInstallFuzzTest004",
    "bmsgetabilitylabel_fuzzer:BMSGetAbilityLabelFuzzTest",
    "bmsgetappidbybundlename_fuzzer:BMSGetAppIdByBundleNameFuzzTest",
    "bmsgetapplicationinfo_fuzzer:BMSGetApplicationInfoFuzzTest",
    "bmsgetapplicationinfos_fuzzer:BMSGetApplicationInfosFuzzTest",
    "bmsgetapptype_fuzzer:BMSGetAppTypeFuzzTest",
    "bmsgetbundlearchiveinfo_fuzzer:BMSGetBundleArchiveInfoFuzzTest",
    "bmsgetbundlegids_fuzzer:BMSGetBundleGidsFuzzTest",
    "bmsgetbundlegidsbyuid_fuzzer:BMSGetBundleGidsByUidFuzzTest",
    "bmsgetbundleinfo_fuzzer:BMSGetBundleInfoFuzzTest",
    "bmsgetbundleinfos_fuzzer:BMSGetBundleInfosFuzzTest",
    "bmsgetbundleInfosbymetadata_fuzzer:BMSGetBundleInfosByMetaDataFuzzTest",
    "bmsgetbundlepackinfo_fuzzer:BMSGetBundlePackInfoFuzzTest",
    "bmsgetbundlesforuid_fuzzer:BMSGetBundlesForUidFuzzTest",
    "bmsgetdefaultapplication_fuzzer:BMSGetDefaultApplicationFuzzTest",
    "bmsgetdisposedstatus_fuzzer:BMSGetDisposedStatusFuzzTest",
    "bmsgethapmoduleinfo_fuzzer:BMSGetHapModuleInfoFuzzTest",
    "bmsgetlaunchwantforbundle_fuzzer:BMSGetLaunchWantForBundleFuzzTest",
    "bmsgetnameforuid_fuzzer:BMSGetNameForUidFuzzTest",
    "bmsgetpermissiondef_fuzzer:BMSGetPermissionDefFuzzTest",
    "bmsgetshortcutinfos_fuzzer:BMSGetShortcutInfosFuzzTest",
    "bmsgetuidbybundlename_fuzzer:BMSGetUidByBundleNameFuzzTest",
    "bmshapmoduleinfo_fuzzer:BMSHapModuleInfoFuzzTest",
    "bmshmpbundleinstaller_fuzzer:BMSHmpBundleInstallerFuzzTest",
    "bmsidleconditionlistener_fuzzer:BMSIdleConditionListenerFuzzTest",
    "bmsidleconditionmgr_fuzzer:BMSIdleConditionMgrFuzzTest",
    "bmsidlemanagerrdb_fuzzer:BMSIdleManagerRdbFuzzTest",
    "bmsinstalldloadcallback_fuzzer:BMSInstalldLoadCallbackFuzzTest",
    "bmsinstalldpermissionmgr_fuzzer:BMSInstalldPermissionMgrFuzzTest",
    "bmsinstalldservice_fuzzer:BMSInstalldServiceFuzzTest",
    "bmsinstalldserviceparallelization_fuzzer:BMSInstalldServiceParallezationFuzzTest",
    "bmsinstallexceptionmgr_fuzzer:BMSInstallExceptionMgrFuzzTest",
    "bmsinstallparam_fuzzer:BMSInstallParamFuzzTest",
    "bmsinstallpluginparam_fuzzer:BMSInstallPluginParamFuzzTest",
    "bmsisexistfirstinstallbundleinfo_fuzzer:BMSIsExistFirstInstallBundleInfoFuzzTest",
    "bmskeyeventmgr_fuzzer:BMSKeyEventMgrFuzzTest",
    "bmsnavigation_fuzzer:BMSNavigationFuzzTest",
    "bmsnewbundledatadirmgr_fuzzer:BMSNewBundleDataDirMgrFuzzTest",
    "bmsplugininstaller_fuzzer:BMSPluginInstallerFuzzTest",
    "bmsonqueryrpcidfinished_fuzzer:BMSOnQueryRpcIdFinishedFuzzTest",
    "bmspreinstallexceptionmgr_fuzzer:BMSPreInstallExceptionMgrFuzzTest",
    "bmsprocesscachecallbackhost_fuzzer:BMSProcessCacheCallbackHostFuzzTest",
    "bmsqueryabilityinfobyuri_fuzzer:BMSQueryAbilityInfoByUriFuzzTest",
    "bmsqueryabilityinfo_fuzzer:BMSQueryAbilityInfoFuzzTest",
    "bmsqueryabilityinfos_fuzzer:BMSQueryAbilityInfosFuzzTest",
    "bmsqueryabilityinfosbyuri_fuzzer:BMSQueryAbilityInfosByUriFuzzTest",
    "bmsqueryallabilityinfos_fuzzer:BMSQueryAllAbilityInfosFuzzTest",
    "bmsquerykeepalivebundleinfos_fuzzer:BMSQueryKeepAliveBundleInfosFuzzTest",
    "bmsqueryrpcidbyabilitytoservicecenter_fuzzer:BMSQueryRpcIdByAbilityToServiceCenterFuzzTest",
    "bmsquickfixbootscanner_fuzzer:BMSQuickFixBootScannerFuzzTest",
    "bmsquickfixchecker_fuzzer:BMSQuickFixCheckerFuzzTest",
    "bmsquickfixdatamgr_fuzzer:BMSQuickFixDataMgrFuzzTest",
    "bmsquickfixdeployer_fuzzer:BMSQuickFixDeployerFuzzTest",
    "bmsquickfixstatuscallbackhost_fuzzer:BMSQuickFixStatusCallbackHostFuzzTest",
    "bmsbundleresourcehelpersecond_fuzzer:BmsBundleResourceHelperSecondFuzzTest",
    "bmsremoteabilityinfo_fuzzer:BMSRemoteAbilityInfoFuzzTest",
    "bmsshortcutvisibledatastoragerdb_fuzzer:BMSShortcutVisibleDataStorageRdbFuzzTest",
    "bmssendcallback_fuzzer:BMSSendCallbackFuzzTest",
    "bmsshortcutdatastoragerdb_fuzzer:BMSShortCutDataStorageRdbFuzzTest",
    "bmsshortcutenableddatastoragerdb_fuzzer:BMSShortcutEnabledDataStorageRdbFuzzTest",
    "bmsuninstalldatamgr_fuzzer:BMSUninstallDataMgrFuzzTest",
    "bmsstatusreceiverhost_fuzzer:BMSStatusReceiverHostFuzzTest",
    "bmsverifymanagerclient_fuzzer:BMSVerifyManagerClientFuzzTest",
    "bmsverifymanagerhost_fuzzer:BMSVerifyManagerHostFuzzTest",
    "bmssystemabilityhelper_fuzzer:BMSSystemAbilityHelperFuzzTest",
  ]

  if (bundle_framework_default_app) {
    deps += [
      "bmsdefaultapp_fuzzer:BMSDefaultAppFuzzTest",
      "bmsdefaultapphost_fuzzer:BMSDefaultAppHostFuzzTest",
      "bmsdefaultappmgr_fuzzer:BMSDefaultAppMgrFuzzTest",
    ]
  }

  if (bundle_framework_app_control) {
    deps += [
      "bmsaddappInstallcontrolrule_fuzzer:BMSAddAppInstallControlRuleFuzzTest",
      "bmsaddappjumpcontrolrule_fuzzer:BMSAddAppJumpControlRuleFuzzTest",
      "bmsaddapprunningcontrolrule_fuzzer:BMSAddAppRunningControlRuleFuzzTest",
      "bmsappcontrolproxy_fuzzer:BMSAppControlProxyFuzzTest",
      "bmsapprunningcontrolrule_fuzzer:BMSAppRunningControlRuleFuzzTest",
      "bmsapprunningcontrolruleresult_fuzzer:BMSAppRunningControlRuleResultFuzzTest",
      "bmsdeleteappinstallcontrolrule_fuzzer:BMSDeleteAppInstallControlRuleFuzzTest",
      "bmsdeleteapprunningcontrolrule_fuzzer:BMSDeleteAppRunningControlRuleFuzzTest",
      "bmsgetappinstallcontrolrule_fuzzer:BMSGetAppInstallControlRuleFuzzTest",
      "bmsgetapprunningcontrolrule_fuzzer:BMSGetAppRunningControlRuleFuzzTest",
    ]
  }
}