# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//foundation/bundlemanager/bundle_framework/appexecfwk.gni")

ohos_shared_library("anishortcutmanager") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  include_dirs = [
    "${inner_api_path}/appexecfwk_core/include",
    "${kits_path}/ani/shortcut_manager",
    "${kits_path}/ani/common",
    "${kits_path}/js/common",
  ]
  sources = [ "ani_shortcut_manager.cpp" ]

  defines = [
    "APP_LOG_TAG = \"BundleMgrService\"",
    "LOG_DOMAIN = 0xD001120",
  ]

  deps = [
    "${base_path}:appexecfwk_base",
    "${common_path}:libappexecfwk_common",
    "${core_path}:appexecfwk_core",
    "${kits_path}/ani/common:bms_ani_common",
    "${kits_path}/js/common:bundle_napi_common",
  ]

  cflags = [
    "-Os",
    "-fstack-protector-strong",
  ]

  cflags_cc = [
    "-Os",
    "-fstack-protector-strong",
  ]

  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
    "runtime_core:ani",
    "runtime_core:ani_helpers",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "bundlemanager"
  part_name = "bundle_framework"
}

generate_static_abc("shortcut_info") {
  base_url = "./ets"
  files = [ "./ets/bundleManager/ShortcutInfo.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/shortcut_info.abc"
}

ohos_prebuilt_etc("shortcut_info_etc") {
  source = "$target_out_dir/shortcut_info.abc"
  module_install_dir = "framework"
  subsystem_name = "bundlemanager"
  part_name = "bundle_framework"
  deps = [ ":shortcut_info" ]
}

generate_static_abc("shortcut_manager") {
  base_url = "./ets"
  files = [ "./ets/@ohos.bundle.shortcutManager.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/shortcut_manager.abc"
}

ohos_prebuilt_etc("shortcut_manager_etc") {
  source = "$target_out_dir/shortcut_manager.abc"
  module_install_dir = "framework"
  subsystem_name = "bundlemanager"
  part_name = "bundle_framework"
  deps = [ ":shortcut_manager" ]
}
